syntax = "proto3";

package ampb;

import "ampb/video.proto";
import "ampb/torrent.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";


message AnimeMovieSubDataRequest {
    repeated AnimeMovieVideoRequest videos = 1;
    repeated AnimeMovieTorrentRequest torrents = 2;
}

message AnimeMovieDubDataRequest {
    repeated AnimeMovieVideoRequest videos = 1;
    repeated AnimeMovieTorrentRequest torrents = 2;
}

message AnimeMovieSubDataResponse {
    repeated AnimeMovieVideoResponse videos = 1;
    repeated AnimeMovieTorrentResponse torrents = 2;
}

message AnimeMovieDubDataResponse {
    repeated AnimeMovieVideoResponse videos = 1;
    repeated AnimeMovieTorrentResponse torrents = 2;
}